CURRENT HOMEPAGE SOURCE.

--- a/service.html
+++ b/service.html
@@ -51,28 +51,12 @@
                                     <div class="main-menu">
                                         <nav>
                                             <ul id="navigation">
-                                                <li><a class="active" href="index.html">home</a></li>
-                                                <li><a href="service.html">service</a></li>
-                                                <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">blog</a></li>
-                                                        <li><a href="single-blog.html">single-blog</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="about.html">about</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="contact.html">Contact</a></li>
+                                                <li><a class="active" href="index.html">HOME</a></li>
+                                                <li><a href="service.html">SERVICE</a></li>
+                                                <li><a href="about.html">ABOUT</a></li>
+                                                <li><a href="contact.html">CONTACT</a></li>
                                             </ul>
                                         </nav>
-                                    </div>
-                                    <div class="book_room">
-                                        <div class="book_btn">
-                                            <a class="popup-with-form" href="#test-form">Appointment</a>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +175,7 @@
                     <div class="appointMent_info">
                         <div class="single_appontment">
                             <h4>Visit our studio at</h4>
-                            <p>221B Baker Street, P. O Box 3 Park Road, 
+                            <p>221B Baker Street, P. O Box 3 Park Road,
                                 USA - 215852</p>
                         </div>
                         <div class="single_appontment">
