--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="flex_column av_one_full  av-animated-generic fade-in  flex_column_div av-zero-column-padding first  avia-builder-el-28  el_before_av_one_full  avia-builder-el-first  " style='border-radius:0px; '>
                             <div style='padding-bottom:0px;color:#ffffff;font-size:40px;' class='av-special-heading av-special-heading-h3 custom-color-heading blockquote modern-quote  avia-builder-el-29  el_before_av_hr  avia-builder-el-first  av-inherit-size'>
                                 <h3 class='av-special-heading-tag'  itemprop="headline"  ><STRONG>Enterprise Content Management(ECM) </sTRONG></h3>
-                                    <div class ='av-subheading av-subheading_below av_custom_color' style='font-size:15px;'>\
+                                    <div class ='av-subheading av-subheading_below av_custom_color' style='font-size:15px;'>
                                         <p>기업 컨텐츠 관리 솔루션</p>
                                     </div>
                                     <div class='special-heading-border'>
@@ -572,7 +572,7 @@
                                 <div class="textwidget">
                                     <p>
                                         주식회사 데이터빈<br />
-                                        서울특별시 강남구 강남대로 342, 역삼빌딩 3층
+                                        경기 수원시 영통구 창룡대로256번길 77, 316호
                                     </p>
                                     <p>help@databean.co.kr</p>
                                 </div>
