--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@
                 <div  id='header_main' class='container_wrap container_wrap_logo'>
                     <div class='container av-logo-container'>
                         <div class='inner-container'>
-                            <strong class='logo'><a href='http://www.databean.co.kr/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
+                            <strong class='logo'><a href='/'><img height='100' width='300' src='/image/logomain.png' alt='DATABEAN' /><span class='subtext'><img src='/image/logowhite2.png' class='alternate' alt='' title='' /></span></a></strong>
                             <nav class='main_menu' data-selectname='Select a page'  role="navigation" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement" >
                                 <div class="avia-menu av-main-nav-wrap av_menu_icon_beside">
                                     <ul id="avia-menu" class="menu av-main-nav">
                                         <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-340 current_page_item menu-item-top-level menu-item-top-level-1">
-                                            <a href="http://www.databean.co.kr/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Reference</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Reference</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="http://www.databean.co.kr/solution/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/solution/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-3">
-                                            <a href="http://databean.co.kr/solution/#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/solution/#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                     </ul>
                                 </div>
