--- a/index.html
+++ b/index.html
@@ -518,10 +518,10 @@
                                 <h3 class="widgettitle">Reference</h3>
                                 <div class="textwidget">
                                     <p>
-                                        <a href="/main/#crm">#1  CRM</a><br />
-                                        <a href="/main/#ecm">#2  ECM</a><br />
-                                        <a href="/main/#bi">#3  BI</a><br />
-                                        <a href="/main/#acct">#4  Accounting</a>
+                                        <a href="/#crm">#1  CRM</a><br />
+                                        <a href="/#ecm">#2  ECM</a><br />
+                                        <a href="/#bi">#3  BI</a><br />
+                                        <a href="/#acct">#4  Accounting</a>
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
