--- a/solution.html
+++ b/solution.html
@@ -100,7 +100,7 @@
                                         <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-top-level menu-item-top-level-1">
                                             <a href="/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Reference</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
-                                        <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-258 current_page_item menu-item-top-level menu-item-top-level-2">
+                                        <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
                                             <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-3">
