--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                                             <a href="/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Reference</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-315" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-2">
-                                            <a href="/solution/" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-3">
-                                            <a href="/solution/#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/solution.html#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                     </ul>
                                 </div>
