--- a/solution.html
+++ b/solution.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="ko-KR" class="html_stretched responsive av-preloader-disabled av-default-lightbox  html_header_top html_logo_left html_main_nav_header html_menu_right html_slim html_header_sticky html_header_shrinking html_header_transparency html_mobile_menu_phone html_disabled html_header_searchicon_disabled html_content_align_center html_header_unstick_top_disabled html_header_stretch_disabled html_minimal_header html_minimal_header_shadow html_entry_id_340 av-no-preview ">
     <head>
         <meta charset="UTF-8" />
@@ -115,7 +115,7 @@
                 </div>
                 <div class='header_bg'></div>
             </header>
-        <div id='main' class='all_colors' data-scroll-offset='88'>
+            <div id='main' class='all_colors' data-scroll-offset='88'>
             <div id='av_section_1' class='avia-section main_color avia-section-huge avia-no-border-styling avia-full-stretch av-section-color-overlay-active avia-bg-style-fixed  avia-builder-el-0  el_before_av_section  avia-builder-el-first  container_wrap fullsize' style = 'background-repeat: no-repeat; background-image: url(/image/main-solution-1.jpg); background-attachment: fixed; background-position: top left; ' data-section-bg-repeat='stretch' >
                 <div class='av-section-color-overlay-wrap'>
                     <div class='av-section-color-overlay' style='opacity: 0.6; background-color: #633b8f; '></div>
