--- a/question.html
+++ b/question.html
@@ -485,10 +485,12 @@
                         <div class='flex_column av_one_fifth  first el_before_av_one_fifth'>
                             <section id="text-3" class="widget clearfix widget_text">
                                 <h3 class="widgettitle">Company Information</h3>
-                                <div class="textwidget"><p><a href="/about">회사소개</a><br />
-                                    <a href="/data/Databean_CompanyBrief_201706.pdf">회사소개서 다운  </a>
-                                    <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
-                                    <a href="/main/#partner">파트너</a></p>
+                                <div class="textwidget">
+                                    <p>
+                                        <a href="/about.html">회사소개</a><br />
+                                        <a href="/data/Databean_CompanyBrief_201706.pdf">회사소개서 다운  </a>
+                                        <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
+                                        <a href="/#partner">파트너</a></p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
                             </section>
@@ -498,8 +500,8 @@
                                 <h3 class="widgettitle">Solution</h3>
                                 <div class="textwidget">
                                     <p>
-                                        <a href="/solution">솔루션 소개</a><br />
-                                        <a href="/solution/#how">개발 진행 과정</a>
+                                        <a href="/solution.html">솔루션 소개</a><br />
+                                        <a href="/solution.html#how">개발 진행 과정</a>
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
