--- a/solution.html
+++ b/solution.html
@@ -447,10 +447,12 @@
                         <div class='flex_column av_one_fifth  first el_before_av_one_fifth'>
                             <section id="text-3" class="widget clearfix widget_text">
                                 <h3 class="widgettitle">Company Information</h3>
-                                <div class="textwidget"><p><a href="/about">회사소개</a><br />
-                                    <a href="/data/Databean_CompanyBrief_201706.pdf">회사소개서 다운  </a>
-                                    <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
-                                    <a href="/main/#partner">파트너</a></p>
+                                <div class="textwidget">
+                                    <p>
+                                        <a href="/about.html">회사소개</a><br />
+                                        <a href="/data/Databean_CompanyBrief_201706.pdf">회사소개서 다운  </a>
+                                        <img src="https://cdn3.iconfinder.com/data/icons/document-icons-2/30/647710-pdf-16.png"><br />
+                                        <a href="/#partner">파트너</a></p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
                             </section>
@@ -460,8 +462,8 @@
                                 <h3 class="widgettitle">Solution</h3>
                                 <div class="textwidget">
                                     <p>
-                                        <a href="/solution">솔루션 소개</a><br />
-                                        <a href="/solution/#how">개발 진행 과정</a>
+                                        <a href="/solution.html">솔루션 소개</a><br />
+                                        <a href="/solution.html#how">개발 진행 과정</a>
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
@@ -475,20 +477,6 @@
                                         <a href="/#bi">#3  BI</a><br />
                                         <a href="/#acct">#4  ACCOUNTING</a><br />
                                         <a href="/#itsm">#4  ITSM</a>
-                                    </p>
-                                </div>
-                                <span class="seperator extralight-border"></span>
-                            </section>
-                        </div>
-                        <div class='flex_column av_one_fifth  el_after_av_one_fifth  el_before_av_one_fifth '>
-                            <section id="text-7" class="widget clearfix widget_text">
-                                <h3 class="widgettitle">Question</h3>
-                                <div class="textwidget">
-                                    <p>
-                                        <a href="/question/#checkpoint">사전 준비 사항</a><br />
-                                        <a href="/question/#faq">자주하는 질문</a><br />
-                                        <a href="/question/#ask">견적문의</a><br />
-                                        <a href="/about/#career">채용문의</a>
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
