--- a/solution.html
+++ b/solution.html
@@ -490,7 +490,7 @@
                                         데이터빈은 기본 프로그램에 대해서는 무료로 이용해 보실 수 있는 기회를 제공합니다.
                                     </p>
                                     <p>
-                                        <a href="/solution/#download">무료 체험 신청 하기</a>
+                                        <a href="/solution.html#download">무료 체험 신청 하기</a>
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
