update form action

--- a/solution.html
+++ b/solution.html
@@ -392,7 +392,7 @@
                                     </div>
                                     <div class="flex_column av_one_fifth  flex_column_div av-zero-column-padding first  avia-builder-el-34  el_after_av_one_full  el_before_av_three_fifth  column-top-margin" style='border-radius:0px; '></div>
                                     <div class="flex_column av_three_fifth  flex_column_div av-zero-column-padding   avia-builder-el-35  el_after_av_one_fifth  el_before_av_one_fifth  column-top-margin" style='border-radius:0px; '>
-                                        <form action="/solution.html" method="post"  class="avia_ajax_form av-form-labels-visible   avia-builder-el-36  avia-builder-el-no-sibling  " data-avia-form-id="1" data-avia-redirect=''>
+                                        <form action="https://script.google.com/a/databean.co.kr/macros/s/AKfycbxKoyPvHMO77RRh_tpb2qzKCZFmIjfbrBDcgqK7Yg/exec" method="post"  class="avia_ajax_form av-form-labels-visible   avia-builder-el-36  avia-builder-el-no-sibling  " data-avia-form-id="1" data-avia-redirect=''>
                                             <fieldset>
                                                 <p class=' first_form  form_element form_fullwidth' id='element_avia_1_1'>
                                                     <label for="avia_1_1">성함 <abbr class="required" title="required">*</abbr></label>
@@ -476,7 +476,7 @@
                                         <a href="/#ecm">#2  ECM</a><br />
                                         <a href="/#bi">#3  BI</a><br />
                                         <a href="/#acct">#4  ACCOUNTING</a><br />
-                                        <a href="/#itsm">#4  ITSM</a>
+                                        <!-- <a href="/#itsm">#4  ITSM</a> -->
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
