update lsglobal logo.

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <!-- ITSM 소개 -->
-                <div id='acct' class='av-layout-grid-container entry-content-wrapper main_color av-flex-cells  avia-builder-el-43  el_after_av_layout_row  el_before_av_section  submenu-not-first container_wrap fullsize'   >
+                <div id='itsm' class='av-layout-grid-container entry-content-wrapper main_color av-flex-cells  avia-builder-el-43  el_after_av_layout_row  el_before_av_section  submenu-not-first container_wrap fullsize'   >
                     <div class="flex_cell no_margin av_two_fifth  avia-builder-el-44  el_before_av_cell_three_fifth  avia-builder-el-first   avia-full-contain av-hide-on-mobile  " style='background-image:url(/image/accounting.png); background-position:center left; background-repeat:no-repeat; background-attachment:fixed; vertical-align:top; padding:800px 30px 30px 30px ; background-color:#633b8f; '>
                         <div class='flex_cell_inner' ></div>
                     </div>
@@ -445,7 +445,7 @@
                                 <div style='padding-bottom:0px;color:#ffffff;font-size:40px;' class='av-special-heading av-special-heading-h3 custom-color-heading blockquote modern-quote  avia-builder-el-47  el_before_av_hr  avia-builder-el-first   av-inherit-size'>
                                     <h3 class='av-special-heading-tag'  itemprop="headline"  ><STRONG>SMS & NMS 솔루션</STRONG></h3>
                                     <div class ='av-subheading av-subheading_below av_custom_color' style='font-size:15px;'>
-                                        <p>이기종 다양한 서버들의 성능/장애 통합 감시 및 조치</p>
+                                        <p>이기종 다양한 서버들의 성능/장애 통합 감시 및 조치 & 대규모 네트워크의 구성, 성능, 운영, 장애 관리를 통한 안정성 보장</p>
                                     </div>
                                     <div class='special-heading-border'>
                                         <div class='special-heading-inner-border' style='border-color:#ffffff'></div>
@@ -457,7 +457,8 @@
                                 <section class="av_textblock_section"  itemscope="itemscope" itemtype="https://schema.org/CreativeWork" >
                                     <div class='avia_textblock  av_inherit_color'  style='color:#ffffff; '  itemprop="text" >
                                         <p>
-                                            <em>보유 중인 모든 장비를 표준 운영 정책을 통해 통합하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치합니다. 또한, 상호 연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공합니다.</em>
+                                            <em>
+                                                보유 중인 모든 장비를 표준 운영 정책을 통해 통합하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치합니다. 또한, 상호 연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공합니다.</em>
                                         </p>
                                     </div>
                                 </section>
@@ -475,17 +476,11 @@
                                         <div class='iconbox_content_container av_inherit_color'  itemprop="text"   style='color:#ffffff; '>
                                             <p style="font-size: 13px; color: white;">
                                                 IT 장비들의 성능을 종합적으로 감시하므로 과부하 시스템을 조기에 발견하고 조치할 수 있어 시스템 작업 효율을 높일 수 있습니다. CPU, 메모리, 디스크 사용률, 프로세스, 네트워크 트래픽, 디스크 I/O 등의 성능을 실시간으로 감시하여 이력 데이터베이스로 구축하므로 축적된 데이터를 근간으로 한 용량 계획(Capacity Planning)이 가능합니다.
-                                            </p>
-                                            <p style="font-size: 13px; color: white;">
                                                 서버 성능 데이터를 분석하여 이력 데이터베이스로 구축하므로 향후 시스템 자원 사용량 예측 및 업그레이드 시기 산정 자료로 활용하며, 성능 자원 사용량 변화를 시간 흐름에 따라 분석한 패턴 흐름 분석 데이터를 제공합니다.
-                                            </p>
-                                            <p style="font-size: 13px; color: white;">
                                                 시스템의 실체인 프로세스에 대한 다양한 관리 기능을 통하여 제공 서비스의 가용률 및 시스템 자원의 사용 이력을 관리할 수 있으며, 서버 장애 시 어떠한 서비스 모듈에 의한 것인지에 대한 원인 파악이 가능합니다.
-                                            </p>
-                                            <p style="font-size: 13px; color: white;">
                                                 다양한 어플리케이션이 운영되는 다수의 웹 콘텐츠 서비스를 End User 관점에서 확인 후 트랜잭션 성능 및 장애 상황을 확인함으로써, 보다 실제적인 웹 서비스 가용성 분석 및 성능 분석을 할 수 있습니다.
                                             </p>
-                                            <p>
+                                            <p style="font-size: 13px; color: white;">
                                                 제조사별, 제품별 다양한 네트워크 장비의 통합 관리 기능을 제공하고 과부하 / 이상 트래픽 관리, 대규모 네트워크 운영 정책 감사 및 종합 점검 기능을 통해 네트워크망의 안정성을 보장합니다.
                                             </p>
                                         </div>
@@ -540,6 +535,9 @@
                                                     </div>
                                                     <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo1.png" class="attachment-no scaling size-no scaling" alt="" />
+                                                    </div>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
+                                                        <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/lsglobal.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                 </div>
                                             </div>
