invalid image name

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo1.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                     <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
-                                                        <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/lsglobal.png" class="attachment-no scaling size-no scaling" alt="" />
+                                                        <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/lsglobal.jpg" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                 </div>
                                             </div>
