--- a/index.html
+++ b/index.html
@@ -458,7 +458,8 @@
                                     <div class='avia_textblock  av_inherit_color'  style='color:#ffffff; '  itemprop="text" >
                                         <p>
                                             <em>
-                                                보유 중인 모든 장비를 표준 운영 정책을 통해 통합하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치합니다. 또한, 상호 연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공합니다.</em>
+                                                보유 중인 모든 장비를 표준 운영 정책을 통해 통합하고, ITIL 표준의 ITSM 기법을 사용하여 자원의 성능과 장애를 감시 및 조치하고 상호 연관성을 분석하여 정확한 진단 및 높은 수준의 서비스를 제공합니다.
+                                            </em>
                                         </p>
                                     </div>
                                 </section>
