--- a/index.html
+++ b/index.html
@@ -522,25 +522,27 @@
                                             </div>
                                             <div class='avia-content-slider-inner'>
                                                 <div class='slide-entry-wrap'  itemscope="itemscope" itemtype="https://schema.org/ImageObject" >
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-1 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/lsglobal.jpg" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-2 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/cogymlogo03.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-1 slide-parity-odd  av_one_fifth first real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-3 slide-parity-odd  av_one_fifth first real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/mstlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-2 slide-parity-even  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-4 slide-parity-even  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/bmcnetlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-3 slide-parity-odd  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/mdstechlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-4 slide-parity-even  av_one_fifth  real-thumbnail'>
+                                                </div>
+                                                <div class='slide-entry-wrap'  itemscope="itemscope" itemtype="https://schema.org/ImageObject" >
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-1 slide-parity-even  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo2.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-2 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo1.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                 </div>
