--- a/index.html
+++ b/index.html
@@ -534,15 +534,13 @@
                                                     <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-4 slide-parity-even av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/bmcnetlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd av_one_fifth post-entry-last real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd av_one_fifth real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/mdstechlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                </div>
-                                                <div class='slide-entry-wrap'  itemscope="itemscope" itemtype="https://schema.org/ImageObject" >
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-1 slide-parity-even  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-6 slide-parity-even  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo2.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-2 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-7 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo1.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                 </div>
