--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                         <div style=' margin-top:30px; margin-bottom:30px;'  class='hr hr-custom hr-center hr-icon-no  avia-builder-el-57  el_after_av_heading  el_before_av_partner '>
                                             <span class='hr-inner   inner-border-av-border-fat' style=' width:50px; border-color:#000000;' ><span class='hr-inner-style'></span></span>
                                         </div>
-                                        <div  data-autoplay='false'  data-interval='7'  data-animation='slide'  class='avia-logo-element-container av-border-deactivate avia-logo-slider avia-content-slider avia-smallarrow-slider avia-content-slider-active noHover avia-content-slider1 avia-content-slider-odd  avia-builder-el-58  el_after_av_hr  el_before_av_hr ' >
+                                        <div  data-autoplay='false'  data-interval='5'  data-animation='slide'  class='avia-logo-element-container av-border-deactivate avia-logo-slider avia-content-slider avia-smallarrow-slider avia-content-slider-active noHover avia-content-slider1 avia-content-slider-odd  avia-builder-el-58  el_after_av_hr  el_before_av_hr ' >
                                             <div class='avia-smallarrow-slider-heading  no-logo-slider-heading '>
                                                 <div class='new-special-heading'>&nbsp;</div>
                                             </div>
@@ -534,15 +534,15 @@
                                                     <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-4 slide-parity-even av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/bmcnetlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd av_one_fifth real-thumbnail'>
+                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-5 slide-parity-odd av_one_fifth real-thumbnail post-entry-last'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/mdstechlogo.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
-                                                    <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-6 slide-parity-even  av_one_fifth  real-thumbnail'>
+                                                    <!-- <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-6 slide-parity-even  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo2.png" class="attachment-no scaling size-no scaling" alt="" />
                                                     </div>
                                                     <div  class='slide-entry flex_column no_margin post-entry slide-entry-overview slide-loop-7 slide-parity-odd  post-entry-last  av_one_fifth  real-thumbnail'>
                                                         <img  itemprop="thumbnailUrl"  width="215" height="50" src="/image/komerilogo1.png" class="attachment-no scaling size-no scaling" alt="" />
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
