update invalid information.

--- a/about.html
+++ b/about.html
@@ -205,13 +205,13 @@
                                                         <b>사업분야   </b><span style="color: grey;">소프트웨어 개발 컨설팅 및 공급, 전자부품 공급</span>
                                                     </p>
                                                     <p style="font-size: 13px; color: grey;">
-                                                        <b>전문개발분야   </b><span style="color: grey;">CRM, ECM, BI, Accounting System<br /></span>
+                                                        <b>전문개발분야   </b><span style="color: grey;">IT 인프라 모니터링<br /></span>
                                                     </p>
                                                     <p style="font-size: 13px; color: grey;">
                                                         <b>설립일  </b><span style="color: grey;">2016년 9월 19일<br /></span>
                                                     </p>
                                                     <p style="font-size: 13px; color: grey;">
-                                                        <b>소재지  </b><span style="color: grey;">서울특별시 강남구 강남대로 342 역삼빌딩 3층<br /></span>
+                                                        <b>소재지  </b><span style="color: grey;">경기 수원시 영통구 창룡대로256번길 77, 316호<br /></span>
                                                     </p>
                                                     <p style="font-size: 13px; color: grey;">
                                                         <b>지적재산권 </b><span style="color: grey;">특허 3건 (정보보호분야, 인공지능분야), 논문 9건 (정보보호, 정보통신, 인공지능, 자연어처리)</span>
@@ -521,6 +521,7 @@
                                         <a href="/#ecm">#2  ECM</a><br />
                                         <a href="/#bi">#3  BI</a><br />
                                         <a href="/#acct">#4  ACCOUNTING</a><br />
+                                        <a href="/#itsm">#5  ITSM</a>
                                         <!-- <a href="/#itsm">#4  ITSM</a> -->
                                     </p>
                                 </div>
@@ -549,7 +550,7 @@
                                         주식회사 데이터빈<br />
                                         경기 수원시 영통구 창룡대로256번길 77, 316호
                                     </p>
-                                    <p>help@databean.co.kr</p>
+                                    <p>sooyong.kim@databean.co.kr</p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
                             </section>
