--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                                         주식회사 데이터빈<br />
                                         경기 수원시 영통구 창룡대로256번길 77, 316호
                                     </p>
-                                    <p>help@databean.co.kr</p>
+                                    <p>sooyong.kim@databean.co.kr</p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
                             </section>
