--- a/solution.html
+++ b/solution.html
@@ -476,6 +476,7 @@
                                         <a href="/#ecm">#2  ECM</a><br />
                                         <a href="/#bi">#3  BI</a><br />
                                         <a href="/#acct">#4  ACCOUNTING</a><br />
+                                        <a href="/#itsm">#5  ITSM</a>
                                         <!-- <a href="/#itsm">#4  ITSM</a> -->
                                     </p>
                                 </div>
@@ -504,7 +505,7 @@
                                         주식회사 데이터빈<br />
                                         경기 수원시 영통구 창룡대로256번길 77, 316호
                                     </p>
-                                    <p>help@databean.co.kr</p>
+                                    <p>sooyong.kim@databean.co.kr</p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
                             </section>
