--- a/about.html
+++ b/about.html
@@ -517,12 +517,11 @@
                                 <h3 class="widgettitle">Reference</h3>
                                 <div class="textwidget">
                                     <p>
-                                        <a href="/#crm">#1  CRM</a><br />
-                                        <a href="/#ecm">#2  ECM</a><br />
-                                        <a href="/#bi">#3  BI</a><br />
-                                        <a href="/#acct">#4  ACCOUNTING</a><br />
-                                        <a href="/#itsm">#5  ITSM</a>
-                                        <!-- <a href="/#itsm">#4  ITSM</a> -->
+                                        <a href="/index.html#itsm">#1  IT 인프라 모니터링</a><br />
+                                        <a href="/index.html#crm">#2  CRM</a><br />
+                                        <a href="/index.html#ecm">#3  ECM</a><br />
+                                        <a href="/index.html#bi">#4  BI</a><br />
+                                        <a href="/index.html#acct">#5  ACCOUNTING</a><br />
                                     </p>
                                 </div>
                                 <span class="seperator extralight-border"></span>
