홈페이지 메뉴 오류 수정

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                             <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
-                                            <a href="/about.com" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">About</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">About</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-4">
                                             <a href="/solution.html#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
