--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                                             <a href="/solution.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Solution</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-top-level menu-item-top-level-3">
-                                            <a href="/about.com" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">About</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
+                                            <a href="/about.html" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">About</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
                                         </li>
                                         <li id="menu-item-235" class="menu-item menu-item-type-custom menu-item-object-custom av-menu-button av-menu-button-bordered menu-item-top-level menu-item-top-level-4">
                                             <a href="/solution.html#download" itemprop="url"><span class="avia-bullet"></span><span class="avia-menu-text">Free Trial</span><span class="avia-menu-fx"><span class="avia-arrow-wrap"><span class="avia-arrow"></span></span></span></a>
@@ -142,7 +142,7 @@
                                                 </div>
                                             </div>
                                             <div class='avia-button-wrap avia-button-center  avia-builder-el-3  el_after_av_heading  avia-builder-el-last '>
-                                                <a href='/data/About_Databean_202106.pdf' class='avia-button  avia-icon_select-no avia-color-custom avia-size-large avia-position-center '  target="_blank"  style='background-color:#ffffff; border-color:#ffffff; color:; ' ><span class='avia_iconbox_title' >회사소개서 다운로드</span></a>
+                                                <a href='/data/About_Databean_202106.pdf' class='avia-button  avia-icon_select-no avia-color-custom avia-size-large avia-position-center '  target="_blank"  style='background-color:#ffffff; border-color:#ffffff; color: ; ' ><span class='avia_iconbox_title' >회사소개서 다운로드</span></a>
                                             </div>
                                         </div>
                                     </div>
